--- a/puppetplays-web/components/mainNav.module.scss
+++ b/puppetplays-web/components/mainNav.module.scss
@@ -1,10 +1,5 @@
 .nav {
   font-size: 15px;
-  margin: 0;
-
-  @media (min-width: 480px) {
-    margin: 8px 14px;
-  }
 
   ul {
     list-style-type: none;
